fix layout issue between header and main

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,7 @@
+.header{
+    position: static;
+}
+
 .toolbar-nav{
     margin-left: auto;
 }
